# vallheru-engine

./: .gitignore  AGENTS.md  ChangeLog  README-port.md  README.md  account.php  addnews.php  addupdate.php  admin.php  aktywacja.php  alchemik.php  alley.php  amarket.php  ap.php  armor.php  bank.php  battle.php  bows.php  bugtrack.php  chat.php  chatmsgs.php  chronicle.php  city.php  cmarket.php  core.php  court.php  crafts.php  czary.php  deity.php  docker-compose.yaml  equip.php  explore.php  farm.php  forums.php  gory.php  grid.php  guilds.php  guilds2.php  help.php  hmarket.php  (+80 more)
adodb/: adodb.inc.php
class/: bot_class.php  player_class.php  quests_class.php  team_class.php
css/: classic.css  ender.css  green.css  greenforest.css  grey.css  light.css  lucass.css
docker/: custom.php.ini  entrypoint.sh  nginx.conf  php.Dockerfile
includes/: abilitybonus.php  astralsteal.php  astralvault.php  avatars.php  battle.php  bbcode.php  checkastral.php  checkexp.php  comments.php  counttime.php  findastral.php  foot.php  functions.php  funkcje.php  graphbar.php  graphbar2.php  head.php  marketaddto.php  marketdel.php  (+14 more)
vallheru-rs/: .clippy.toml  AGENTS.md  Cargo.toml
vallheru-rs/crates/engine/: Cargo.toml
vallheru-rs/crates/engine/src/: lib.rs
vallheru-rs/crates/storage/: Cargo.toml
vallheru-rs/crates/storage/src/: lib.rs
vallheru-rs/crates/web/: Cargo.toml
vallheru-rs/crates/web/src/: main.rs
vallheru-rs/src/: config.rs  main.rs
vallheru-rs/src/players/: actions.rs  controller.rs  mod.rs  model.rs
vallheru-rs/src/web/: health.rs  mod.rs  router.rs
(+376 files in other folders)
